--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div id="cabecera">Cabeceraaaaaa</div>
         <h1>Hey, comencemos a picar</h1>
         <p class="clase1">Párrafo de ejemplo</p>
         <p>Agregando texto ara la rama</p>
