2. finalizada la cabecera

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="cabecera">Cabeceraaaaaa</div>
+        <br/>
+        <div id="cabecera">Cabeceraaaaaa <br/>probando</div>
         <h1>Hey, comencemos a picar</h1>
         <p class="clase1">Párrafo de ejemplo</p>
         <p>Agregando texto ara la rama</p>
