cambio en master

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
         <div id="cabecera">Cabeceraaaaaa <br/>probando</div>
         <h1>Hey, comencemos a picar</h1>
         <p class="clase1">Párrafo de ejemplo</p>
-        <p>Agregando texto ara la rama</p>
+        <p>Agregando texto para la rama</p>
         <p class="clase2">
             What is Lorem Ipsum?
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -19,7 +19,7 @@
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
             <p class="p2">
-                Párrafo aaadiconal
+                Párrafo adiconal!!!
             </p>
         </p>
     </body>
