--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
             <p class="p2">
-                Párrafo aaaaadiconallllllllll
+                Párrafo adiconal !!!
             </p>
         </p>
     </body>
