--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <br/>
-        <div id="cabecera">Cabeceraaaaaa <br/>probando</div>
+        <div id="cabecera">Cabeceraaaaaa <br/>MASTER</div>
         <h1>Hey, comencemos a picar</h1>
         <p class="clase1">Párrafo de ejemplo</p>
         <p>Agregando texto para la rama</p>
@@ -19,7 +19,7 @@
             and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
             <p class="p2">
-                Párrafo adiconal!!!
+                Párrafo adiconal MASTER!!!
             </p>
         </p>
     </body>
