--- a/blog.html
+++ b/blog.html
@@ -23,6 +23,6 @@
             </p>
         </p>
         <p>Último párrafo</p>
-        <p>Next -> </p>
+        <p>Next -> cambio desde Github</p>
     </body>
 </html>
